--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="profile_picture">Profile picture</string>
     <string name="search_for_a_file">Search for a file</string>
     <string name="courseName">Course Name</string>
+    <string name="upLoadPageStringName">Upload</string>
+    <string name="upLoadFileDescription">File Description</string>
 
 </resources>
