--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="signupButton">Sign up</string>
     <string name="search_for_a_file">Search for a file</string>
     <string name="courseName">Course Name</string>
+    <string name="files">Files</string>
     <string name="upLoadPageStringName">Upload</string>
     <string name="upLoadFileDescription">File Description</string>
     <string name="testButton">Test</string>
